--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--img src="Background.png" class="backgroundImage" alt=""-->
     <section class="content">
         <h1>overskrift</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, delectus esse iusto explicabo architecto totam enim incidunt, in, harum praesentium alias ipsam ad illum voluptatem eius cumque sed doloribus perspiciatis.</p>
@@ -27,7 +28,7 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, delectus esse iusto explicabo architecto totam enim incidunt, in, harum praesentium alias ipsam ad illum voluptatem eius cumque sed doloribus perspiciatis.</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, delectus esse iusto explicabo architecto totam enim incidunt, in, harum praesentium alias ipsam ad illum voluptatem eius cumque sed doloribus perspiciatis.</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, delectus esse iusto explicabo architecto totam enim incidunt, in, harum praesentium alias ipsam ad illum voluptatem eius cumque sed doloribus perspiciatis.</p>
-        
+
     </section>
 </body>
 </html>
